Change menu font
Used tok class to change menu font and add import links to all pages heads

--- a/fav1liner.html
+++ b/fav1liner.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 <style>
 body{
     padding:50px;
@@ -34,6 +36,9 @@ body{
   h1{
     letter-spacing: 0.2em;
   }
+  .tok{
+font-family: 'Poppins', sans-serif;
+}
   </style>
 
   <script type="text/javascript">
@@ -46,7 +51,7 @@ body{
 <body onload="afunction();">
 
 	<!-- Navigation (Stays on Top) -->
-<div class="w3-top w3-bar w3-center">
+<div class="tok w3-top w3-bar w3-center">
 <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
 <a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
 <a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
