--- a/freebie.html
+++ b/freebie.html
@@ -6,6 +6,8 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <script src="https://www.w3schools.com/lib/w3.js"></script>
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 <style>
   body{
     padding:50px;
@@ -22,6 +24,9 @@
     font-weight: bold;
     text-decoration: none;
   }
+  .tok{
+font-family: 'Poppins', sans-serif;
+}
   </style>
   <script type="text/javascript">
         function afunction() {
@@ -32,7 +37,7 @@
 </head>
 <body onload="afunction();">
 	<!-- Navigation (Stays on Top) -->
-  <div class="w3-top w3-center w3-bar">
+  <div class="tok w3-top w3-center w3-bar">
     <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
   <a href="funny.html" class="w3-bar-item w3-button w3-mobile">Funny</a>
   <a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
