--- a/funny.html
+++ b/funny.html
@@ -6,9 +6,13 @@
 	<meta content="width=device-width,initial-scale=1" name="viewport">
 	<link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
 	<script src="https://www.w3schools.com/lib/w3.js">
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	</script>
 	<style>
-
+	.tok{
+	font-family: 'Poppins', sans-serif;
+	}
 	   .punchline {
 	    display: none;
 	   }
@@ -54,7 +58,7 @@
 </head>
 <body onload="afunction();">
 	<!-- Navigation (Stays on Top) -->
-	<div class="w3-top w3-center w3-bar">
+	<div class="tok w3-top w3-center w3-bar">
 	  <a href="index.html" class="w3-bar-item w3-button w3-mobile">Home</a>
 	<a href="funny.html" class="w3-bar-item w3-button w3-mobile w3-hide">Funny</a>
 	<a href="fears.html" class="w3-bar-item w3-button w3-mobile">Fears</a>
