--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
 	<script src="https://www.w3schools.com/lib/w3.js">
 	</script>
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 	<style>
 	 body{
 	   padding:50px;
@@ -28,7 +30,13 @@
 	 margin: 0px;
 	   height: 100%;
 	}
-
+	#welcome{
+		//font-size: 20px;
+		  font-family: "futura-pt";
+	}
+	.tok{
+font-family: 'Poppins', sans-serif;
+}
 	</style>
 	<script type="text/javascript">
 	       function afunction() {
@@ -39,11 +47,11 @@
 </head>
 <body onload="afunction();">
 	<!-- Navigation (Stays on Top) -->
-	<div class="w3-top w3-center w3-bar">
+	<div class="tok w3-top w3-center w3-bar">
 		<a class="w3-bar-item w3-button w3-mobile" href="index.html">Home</a> <a class="w3-bar-item w3-button w3-mobile" href="funny.html">Funny</a> <a class="w3-bar-item w3-button w3-mobile" href="fears.html">Fears</a> <a class="w3-bar-item w3-button w3-mobile" href="favs.html">Favs</a> <a class="w3-bar-item w3-button w3-mobile" href="freebie.html">Freebie</a> <a class="w3-bar-item w3-button w3-mobile" href="fav1liner.html">Favorite 1-liner</a> <a class="w3-bar-item w3-mobile t1" href="index.html" style="width:33.3%; font-size: large;">Abby's Website</a>
 	</div>
 	<section class="intro">
-		<h1>Welcome to my corner of the web:)</h1>
+		<h1 id="welcome">Welcome to my corner of the web:)</h1>
 		<p>Feel free to click around to learn more about me</p>
 		<div class="w3-padding-large photosection">
 		<p>I love flowers and photography please find some of my favorite pictures I have taken below</p><img class="mySlides" src="images/flowersfavs/flower1.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower3.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower4.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower5.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower6.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower7.jpg" style="width:100%"> <img class="mySlides" src="images/flowersfavs/flower8.jpg" style="width:100%"></div><br>
